--- a/vignettes/epicontacts.Rmd
+++ b/vignettes/epicontacts.Rmd
@@ -69,7 +69,7 @@ Main features include:
 
 * **make_epi_contacts**: a constructor for the new `epi_contacts` class.
 
-* **subset_clusters_by_nodes**: subset an `epi_contacts` object based on individuals/nodes of interest.
+* **subset_clusters_by_id**: subset an `epi_contacts` object based on a IDs of cases of interest.
 
 * **subset_clusters_by_size**:  subset an `epi_contacts` object based on size(s) of clusters (clusters being groups of connected individuals/nodes).
 
@@ -258,8 +258,8 @@ sort(unique(x_id$linelist$cluster_size))    # unique cluster sizes of clusters i
 1. **Subset network via  node-based selection** 
 
 ```{r, eval=TRUE}   
-  nodes <- c("SK_14","SK_145")              # Select  one or more record(s)
-  x_subset_N <- subset_clusters_by_nodes(x, nodes)  # connected component which includes the selected nodes
+  cases <- c("SK_14","SK_145")              # Select  one or more record(s)
+  x_subset_N <- subset_clusters_by_id(x, cases)  # connected component which includes the selected cases
   plot(x_subset_N)            # selection  as cluster to which "SK_14" belongs = all ?
 ```
   
@@ -340,7 +340,7 @@ To interact with the plot:
 * zoom: scrollwheel
 * rotate: left-mouse button + move
 * pan: right-mouse button + move
-* identify node by label: mouse over 
+* identify case by label: mouse over 
 
 For more information on 3D javascript graphs, visit B.W. Lewis' [page](http://bwlewis.github.io/rthreejs/graphjs.html)
 
